objects/LLC_BI__Legal_Entities__c.object
<CustomObject>
    <fields>
        <fullName>Integration_Source__c</fullName>
        <description>Custom field to designate source Credit Union of object used by nCino Data Services.</description>
        <label>Integration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>Custom Migration ID for Entity Involvement object used by nCino Data Services.</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cm_Has_Deposit__c</fullName>
        <description>Used to filter deposit records in the Review credit memo. Added for Commercial Accelerate project.</description>
        <formula>NOT(ISBLANK(LLC_BI__Deposit__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Deposit</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>LLC_BI__Deposit_Involvement</fullName>
        <active>true</active>
        <label>Deposit Involvement</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Loan_Involvement</fullName>
        <active>true</active>
        <label>Loan Involvement</label>
    </recordTypes>
</CustomObject>